--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.datasource.initialization-mode=always
 spring.jpa.defer-datasource-initialization=true
+spring.r2dbc.initialize-schema=always
 
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
